Fix regression with simple qsTr() bindings on non-string properties

Commit 61887379b0c823953b61120532055fcbd881aadd introduced an
optimization to avoid lengthy JS evaluation for simple qsTr("constant
string") bindings. Unfortunately it missed the case that the binding is
_not_ to a QString "native" property, resulting in memory corruption:

    property var str: qsTr("sometimes")

... where QQmlVMEMetaObject's metacall would expect the void *arg to be
a QVariant and the translation binding would "deliver" a QString
pointer.

[ChangeLog[Qt][Qml] Fix crash with simple qsTr() bindings on var
properties.

Change-Id: I8d35eecbf6697fb3e3ad184389deb81890b08e29
Task-number: QTBUG-65624
Reviewed-by: Lars Knoll <lars.knoll@qt.io>